--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ dependencies:
   
   # UUID generation
   uuid: ^4.5.1
+  webview_flutter: ^4.10.0
+  html: ^0.15.5
+  webview_flutter_android: ^4.3.4
+  webview_flutter_wkwebview: ^3.18.5
 
 dev_dependencies:
   flutter_test:
