Enhance video content handling and update permissions
- Added NSPhotoLibraryUsageDescription, NSCameraUsageDescription, and NSMicrophoneUsageDescription to Info.plist for necessary permissions.
- Updated Subtitle factory to provide default values for startTime, endTime, and text.
- Improved VideoContent.fromJson method to handle missing fields and ensure subtitles is a list before processing.
- Added error handling for missing required fields in JSON during video parsing in StorageService.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,6 +46,12 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>io.flutter.embedded_views_preview</key>
-<true/>
+	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photo library to select videos</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to your camera to record videos</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to your microphone when recording videos</string>
 </dict>
 </plist>
