--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,7 @@
 	<string>This app needs access to your camera to record videos</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to your microphone when recording videos</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app needs access to local network for debugging purposes</string>
 </dict>
 </plist>
