--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,14 @@ dependencies:
   html: ^0.15.5
   webview_flutter_android: ^4.3.4
   webview_flutter_wkwebview: ^3.18.5
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.7
+  firebase_auth: ^5.5.3
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  connectivity_plus: ^6.1.4
+  google_sign_in: ^6.3.0
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +87,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
