--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,10 @@ dependencies:
   connectivity_plus: ^6.1.4
   google_sign_in: ^6.3.0
   sign_in_with_apple: ^7.0.1
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +104,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/icons/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
