Update Google services configuration and enhance iOS Info.plist
- Added OAuth client details to google-services.json for improved authentication.
- Updated GoogleService-Info.plist with new CLIENT_ID and REVERSED_CLIENT_ID for iOS.
- Included NSBonjourServices key in Info.plist to support local network services.

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>1028174393649-3cu65svme7gqnjb847fkeid9te7jrlgv.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1028174393649-3cu65svme7gqnjb847fkeid9te7jrlgv</string>
 	<key>API_KEY</key>
 	<string>AIzaSyB-XnQ0dp3seMIavxc376o7MW6rDUsnm8E</string>
 	<key>GCM_SENDER_ID</key>
