--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   equatable: ^2.0.7
   flutter_svg: ^2.1.0
   pin_code_fields: ^8.0.1
+  country_code_picker: ^3.3.0
 
 dev_dependencies:
   flutter_test:
