Update .gitignore to include iOS project files
- Added entries for `project.pbxproj` and `Runner.xcscheme` to ensure proper exclusion of build artifacts and configuration files from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ macos/Flutter/GeneratedPluginRegistrant.swift
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugins.cmake
 pubspec.lock
+ios/Runner.xcodeproj/project.pbxproj
+ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+ios/Runner.xcodeproj/project.pbxproj
