Refactor YouTube URL handling and update iOS project configurations
- Enhanced `YoutubeUtils` to validate and extract YouTube video IDs using improved regex patterns for various URL formats.
- Updated `add_video_screen.dart` to utilize the new `isYoutubeUrl` method for better URL validation.
- Modified `Info.plist` to change the Bonjour service string for improved service discovery.
- Adjusted `Profile.xcconfig` to include application-specific build settings and ensure proper configuration file inclusion.
- Updated scheme version in `Runner.xcscheme` for compatibility with the latest Xcode features.

--- a/ios/Flutter/Profile.xcconfig
+++ b/ios/Flutter/Profile.xcconfig
@@ -1,2 +1,6 @@
-#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
+// Application-specific build settings.
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
 #include "Generated.xcconfig"
+
+FLUTTER_BUILD_MODE=profile
+// Only override parameters FlutterSetBuildMode defines. Other parameters are defined in Generated.xcconfig.
