--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,7 +41,7 @@
 	<true/>
 	<key>NSBonjourServices</key>
 	<array>
-		<string>_dartVmService._tcp</string>
+		<string>_dartobservatory._tcp</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to your camera to record videos</string>
