Update dependencies and iOS project configurations
- Upgraded Dart package versions in `pubspec.lock` for `async`, `fake_async`, `leak_tracker`, and `vm_service`.
- Updated Firebase dependencies in `Podfile.lock` to version 11.15.0 for improved stability.
- Refined `Profile.xcconfig` to ensure proper inclusion of configuration files.
- Modified `project.pbxproj` to update framework references and streamline build settings.
- Removed obsolete `IDEWorkspaceChecks.plist` and `WorkspaceSettings.xcsettings` files for cleaner project structure.

--- a/ios/Flutter/Profile.xcconfig
+++ b/ios/Flutter/Profile.xcconfig
@@ -1,6 +1,2 @@
-// Application-specific build settings.
-#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
 #include "Generated.xcconfig"
-
-FLUTTER_BUILD_MODE=profile
-// Only override parameters FlutterSetBuildMode defines. Other parameters are defined in Generated.xcconfig.
