--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   # Video player for handling various video formats
   video_player: ^2.9.5
   
-  # For YouTube video playback and extraction
+  # For YouTube video playbook and extraction
   youtube_explode_dart: ^2.4.2
+  
+  # Alternative YouTube caption extraction
+  youtube_caption_scraper: ^0.2.1
   
   # YouTube player for Flutter
   youtube_player_flutter: ^9.1.1
