--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   youtube_caption_scraper: ^0.2.1
   
   # YouTube player for Flutter
-  youtube_player_flutter: ^9.1.1
   
   # HTTP requests for API calls
   http: ^1.4.0
@@ -85,6 +84,8 @@ dependencies:
   flutter_svg: ^2.1.0
   pin_code_fields: ^8.0.1
   country_code_picker: ^3.3.0
+  file_picker: ^10.2.0
+  youtube_player_iframe: ^5.2.1
 
 dev_dependencies:
   flutter_test:
