Add speech recognition and text-to-speech features
- Integrated SpeechService for real-time speech recognition capabilities.
- Implemented TtsService for text-to-speech functionality, enhancing user interaction.
- Added SayItDialog widget to facilitate pronunciation practice with feedback.
- Updated VideoPlayerManager to initialize speech and TTS services.
- Enhanced video player screen to include a dialog for practicing pronunciation based on subtitles.
- Updated dependencies in pubspec.yaml for speech_to_text and flutter_tts packages.
- Removed YouTubeAuthWidget as part of the refactor for improved authentication flow.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,7 +48,9 @@
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This app needs access to local network for debugging purposes</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>This app needs access to your microphone when recording videos</string>
+	<string>This application needs access to the microphone to enable the "Say it" feature, which allows you to practice your pronunciation.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This application uses speech recognition to evaluate your pronunciation when you use the "Say it" feature.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to your photo library to select videos</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
