Update .gitignore to exclude generated Dart files
- Added patterns to ignore *.g.dart and *.freezed.dart files, preventing them from being tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ pubspec.lock
 ios/Runner.xcodeproj/project.pbxproj
 ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
 ios/Runner.xcodeproj/project.pbxproj
+
+# Generated files
+*.g.dart
+*.freezed.dart
