Update video processing to support local file storage and enhance player UI
- Added functionality to create a local 'videos' directory and save video files within it.
- Updated video content handling to reflect the new local file paths.
- Refactored video player UI for improved layout and user interaction, including a play/pause toggle and better subtitle management.
- Introduced error handling for video player initialization and display.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   country_code_picker: ^3.3.0
   file_picker: ^10.2.0
   youtube_player_iframe: ^5.2.1
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
