Update dependencies and .gitignore for improved project management
- Added new entries to .gitignore to exclude Podfile.lock and GeneratedPluginRegistrant.swift files for iOS and macOS.
- Updated flutter_lints version to 2.0.3 and added integration_test as a direct dev dependency.
- Added several transitive dependencies in pubspec.lock, including flutter_driver, fuchsia_remote_debug_protocol, and webdriver, among others.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,10 @@ ios/Runner.xcodeproj/project.pbxproj
 *.freezed.dart
 /ios/Runner.xcodeproj/project.pbxproj
 /ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+ios/Podfile.lock
+macos/Flutter/GeneratedPluginRegistrant.swift
+ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Flutter/GeneratedPluginRegistrant.swift
+ios/Podfile.lock
