--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ macos/Flutter/GeneratedPluginRegistrant.swift
 macos/Flutter/GeneratedPluginRegistrant.swift
 macos/Flutter/GeneratedPluginRegistrant.swift
 ios/Podfile.lock
+ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
